--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     </li>
                   </ul>        
            <center>
-                <p>  <img width="50%" height="600px" src="Images/Business card side 2.jpg"></p>
+                <p>  <img width="50%" height="600px" src="Images/Harris Landscaping Logo.png"></p>
             </center>
             
         <div id="button">   
