--- a/AboutUs.html
+++ b/AboutUs.html
@@ -5,22 +5,22 @@
     <meta name="viewpoint" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="Stylesheet" type="text/css" href="Css/Stylesheet.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-<title>Home Page Harris LandScaping</title>  
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" 
+<title></title>  
 </head>
 <body> 
+   
     <body class= "Container"> 
-        <div class="navbar navbar-inverse">
+        <div class="navbar navbar-light" style="background-color: rgb(28, 168, 28);">
         <div class="Container-fluid">
             <div class="navbar-header">
-              <ul class="nav navbar-nav">
-                    <li class= "active"><a href="index.html">Home</a> </li> 
-                    <li><a href="AboutUs.html">About Us</a> </li> 
-            </div>
-            </div>
+                      <ul class="nav navbar-nav">
+                        <button type="button" class= "active btn btn-primary btn-lg btn btn-outline-dark"><a href="index.html"></a>Home</button>
+                        <button type="button" class= "active btn btn-primary btn-lg btn btn-outline-dark"><a href="AboutUs.html"></a>About Us</button>
+                        
+           </div>
         </div>
-                    </li>
-                  </ul>        
+        </div>
            <center>
                 <p>  <img width="50%" height="600px" src="Images/Business card side 2.jpg"></p>
             </center>
