--- a/AboutUs.html
+++ b/AboutUs.html
@@ -21,7 +21,10 @@
              <img  src="Images/Business card side 2.jpg" style= "width:25%; height:30%">
             </center>
             
-       
+            <div class="container">
+                <h1>Mission Statement</h1>
+                <p>Providing Superior Quality Landscaping Services to our Clients,<br/> thus bringing their imagination to reality.</p>
+              </div>
 
             <div class="footer">
                 <a href="https://facebook.com" target="_blank">Facebook</a>
