--- a/index.html
+++ b/index.html
@@ -20,8 +20,32 @@
 </center>    
         
 <div class="container">
-    <p>The w3-container class is an important w3.CSS class.</p>
+    <h1>Mission Statement</h1>
+    <p>Providing Superior Quality Landscaping Services to our Clients, thus bringing their imagination to reality.</p>
+
+    <div id="carouselCaptions" class="carousel slide" data-ride="carousel">
+        <ol class="carousel-indicators">
+          <li data-target="#carouselCaptions" data-slide-to="0" class="active"></li>
+          <li data-target="#carouselCaptions" data-slide-to="1" class="active"></li>
+          <li data-target="#carouselCaptions" data-slide-to="2"class="active"></li>
+        </ol>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="Images/Garden.jpg" class="d-block w-100" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>Manicured Front Lawn</h5>
+              <p>Custom Amazonian Cultured Lawn made with cut stones and exotic plants.</p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="Images/Garden4.jpg" class="d-block w-100" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>Second slide label</h5>
+              <p>Some representative placeholder content for the second slide.</p>
+            </div>
+          </div>
   </div>
+  <script>$('.carousel').carousel()</script>
     
 
 
