--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
     <div class="banner container-fluid">
             <div class="row">
               <div class="socials col-md">
-                <img  src="Images/Harris Landscaping Logo without bg.png" style= width:75%;>                   
+                <img  src="Images/Harris Landscaping Logo without bg.png"/>                   
               </div>
               <div class="col-md">
               </br>
-  <!--SLIDE-->
+  
   
         <div>
             <p class="quote">
@@ -49,7 +49,7 @@
       </div>
       </div>
       </div>
-  <!--END SLIDE-->
+  
   
               
               </div>
